# CryptoLocker

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.bc93a4d  main.cpp  vcpkg.json
build-CryptoLocker-CryptoKit/.cmake/api/v1/reply/: cache-v2-f5e4b98d20ab0b658428.json  cmakeFiles-v1-bc36d271fa3c7ecb0a3f.json  codemodel-v2-491ea68d9182b5cab61c.json  directory-.-Debug-929c91e81eb03a389ecc.json  directory-.-RelWithDebInfo-6c8c547bbfb8bbef65d3.json  directory-.-Release-d3fdc42921fdbb5af89c.json  index-2023-01-20T08-16-49-0095.json  target-CryptoLocker-Debug-1608e32bd744cb8a0f20.json  target-CryptoLocker-RelWithDebInfo-4e56222994e0624ef4ff.json  target-CryptoLocker-Release-bbbb5fc73afa53ded583.json  target-CryptoLocker_autogen-Debug-a773f20b139292ed8682.json  target-CryptoLocker_autogen-RelWithDebInfo-1cd5e22f4c7f40915012.json  target-CryptoLocker_autogen-Release-f54edf4e74a9ad24194d.json  target-CryptoLocker_autogen_timestamp_deps-Debug-5913fc590293e58b8f13.json  target-CryptoLocker_autogen_timestamp_deps-RelWithDebInfo-4cc618eb594378fe3a43.json  target-CryptoLocker_autogen_timestamp_deps-Release-426fd61780e51f62dc5b.json
cmake/: app_utils.cmake
service/: folderservice.cpp  folderservice.h  rsaencryptor.cpp  rsaencryptor.h
view/: screenblocker.cpp  screenblocker.h
